add status variable to project
